--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body onload="odliczanie();">
 	<div id="container">
 		<div class="recangle">
-			<div id="logo"><a href="zatrudnij-programiste-webowego" class="tilelinkhtml5">Jan Kowalski</a></div>
+			<div id="logo"><a href="zatrudnij-programiste-webowego" class="tilelinkhtml5">Ola Cirocka</a></div>
 			<div id="zegar">15:00:00</div>
 			<div style="clear:both;"></div>
 		</div>
